# cc2dx-ashlar

./: .gitignore  CMakeLists.txt
Classes/: AppDelegate.cpp  CursesTileMap.cpp  CursesTileMap.hpp  HelloWorldScene.cpp  HelloWorldScene.h
libs/Onigmo/: st.h
libs/ashlar/: app.cpp  app.h  completer.cpp  editor.cpp  extension.cpp  highlighter.cpp  keybinding.cpp  render.h  util.cpp
libs/ashlar/platform/: render.cpp  render_cc2dx.cpp  render_sdl.cpp
libs/imgui/: CCIMGUI.cpp  CCIMGUI.h  CCImGuiLayer.cpp  CCImGuiLayer.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imstb_truetype.h
libs/lite/: renderer.cpp  renderer.h  renderer_dirty._cpp
proj.android/: gradle.properties  settings.gradle  settings.json
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/assets/: blank.tmx
proj.android/app/res/values/: strings.xml
proj.ios_mac/hello_World.xcodeproj/: project.pbxproj
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
proj.win32/: hello_World.sln
